--- a/trainer/TOC.yaml
+++ b/trainer/TOC.yaml
@@ -7,13 +7,13 @@ training:
   - SCM:
     - Ansible:
       - day1:
-        session1: Introduction to SCM & Ansible
-        session2: Inventory & Adhoc Commands
+        session1: ['Introduction to SCM' ,'Ansible']
+        session2:
+          - Inventory
+          - Adhoc Commands
       - day2:
         session1: Modules
         session2: Playbooks
-      - day3:
-        session1: Variables & Roles
-        session2: Tower & Galaxy
+      - day3: {session1: ['Variables','Roles'], session2: ['Tower']}
   - monitoring
 ...
