Updated docker file to install 2.x version of ansible

--- a/attendees/setup/docker/inventory/Dockerfile
+++ b/attendees/setup/docker/inventory/Dockerfile
@@ -1,5 +1,7 @@
 FROM ubuntu:14.04
 
 RUN apt-get -y update
+RUN apt-get -y install git vim software-properties-common
+RUN apt-add-repository -y ppa:ansible/ansible
+RUN apt-get -y update
 RUN apt-get -y install ansible
-RUN apt-get -y install git vim
