--- a/attendees/setup/docker/inventory/Dockerfile.cserver
+++ b/attendees/setup/docker/inventory/Dockerfile.cserver
@@ -2,3 +2,6 @@ FROM training/ansible
 
 COPY cserver.pub /root/.ssh/id_rsa.pub
 COPY cserver /root/.ssh/id_rsa
+
+RUN chmod 600 /root/.ssh/id_rsa.pub
+RUN chmod 600 /root/.ssh/id_rsa
