--- a/attendees/setup/docker/inventory/Dockerfile.tserver
+++ b/attendees/setup/docker/inventory/Dockerfile.tserver
@@ -1,5 +1,5 @@
 FROM training/ansible
 
 COPY cserver.pub /root/.ssh/authorized_keys
-
+RUN chmod 600 /root/.ssh/authorized_keys
 RUN apt-get -y install openssh-server
