--- a/attendees/setup/docker/modules/Makefile
+++ b/attendees/setup/docker/modules/Makefile
@@ -1,11 +1,13 @@
 build:
-	docker build -t training/ansible .
+	docker build -t training/ansible:ubuntu -f Dockerfile.ubuntu .
+	docker build -t training/ansible:centos -f Dockerfile.centos .
 
 build-cserver:
 	docker build -t training/ansible:cserver -f Dockerfile.cserver .
 
 build-tserver:
-	docker build -t training/ansible:tserver -f Dockerfile.tserver .
+	docker build -t training/ansible:tserver_centos -f Dockerfile.tserver.centos .
+	docker build -t training/ansible:tserver_ubuntu -f Dockerfile.tserver.ubuntu .
 
 build-all:
 	make build
@@ -14,27 +16,27 @@ build-all:
 
 run-web-az-a:
 	docker rm -f webaza || true
-	docker run -h webaza --name webaza -itd training/ansible:tserver
+	docker run -h webaza --name webaza -itd training/ansible:tserver_ubuntu
 
 run-web-az-b:
 	docker rm -f webazb || true
-	docker run -h webazb --name webazb -itd training/ansible:tserver
+	docker run -h webazb --name webazb -itd training/ansible:tserver_centos
 
 run-app-az-a:
 	docker rm -f appaza || true
-	docker run -h appaza --name appaza -itd training/ansible:tserver
+	docker run -h appaza --name appaza -itd training/ansible:tserver_ubuntu
 
 run-app-az-b:
 	docker rm -f appazb || true
-	docker run -h appazb --name appazb -itd training/ansible:tserver
+	docker run -h appazb --name appazb -itd training/ansible:tserver_centos
 
 run-db-az-a:
 	docker rm -f dbaza || true
-	docker run -h dbaza --name dbaza -itd training/ansible:tserver
+	docker run -h dbaza --name dbaza -itd training/ansible:tserver_ubuntu
 
 run-db-az-b:
 	docker rm -f dbazb || true
-	docker run -h dbazb --name dbazb -itd training/ansible:tserver
+	docker run -h dbazb --name dbazb -itd training/ansible:tserver_centos
 
 run-control-server:
 	docker rm -f cserver || true
