role for tomcat

--- a/attendees/exercise/day3/tomcat/tasks/main.yml
+++ b/attendees/exercise/day3/tomcat/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 
-#- name: Update the cache...
-#  apt: update_cache=yes
+- name: Update the cache...
+  apt: update_cache=yes
 
 - name: Install Tomcat
   apt: name={{ item }} state=present
@@ -17,14 +17,9 @@
     repo: "{{ git_url }}"
     dest: "{{ dest_path }}"
 
-#- name: Code clone
-#  git: repo={{ git_url }} dest={{ dest_path }}
-#    repo: "{{ 'git_url' }}"
-#    dest: "{{ dest_path }}"
-
 - name: Copy sample war file
   copy:
-    src: "{{ war_file_path }}"
+    src: "{{ dest_path }}/{{ war_file_path }}"
     dest: "{{ wepapps_path }}"
     remote_src: yes
   notify:
