Updated cserver image with default files

--- a/attendees/hands-on/roles/setup/Dockerfile.cserver
+++ b/attendees/hands-on/roles/setup/Dockerfile.cserver
@@ -1,6 +1,8 @@
 FROM training/ansible:ubuntu
 
 RUN apt-get -y install tree
+COPY hostfile /etc/ansible/hosts
+COPY ansible.cfg /etc/ansible/ansible.cfg
 COPY cserver.pub /root/.ssh/id_rsa.pub
 COPY cserver /root/.ssh/id_rsa
 
